--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,31 +2,21 @@ info:
   component: Hystrix Dashboard
   
 server:
-  port: ${port:9091}
-  
-spring:
-  application:
-    name: circuit-breaker
+  port: ${port:8511}
 
-endpoints:
-  restart:
-    enabled: true
-  shutdown:
-    enabled: true
 
 eureka:
     # Region where eureka is deployed - For AWS specify one of the AWS regions, for other datacenters specify a arbitrary string
     # indicating the region.This is normally specified as a -D option (eg) -Deureka.region=us-east-1
     #region: default
   instance:
+    hostname: localhost
     leaseRenewalIntervalInSeconds: 1
     leaseExpirationDurationInSeconds: 2
-    #Virtual host name by which the clients identifies this service
-    #virtualHostName: ${spring.application.name}    
   # support to resolve service-id 
   client:
     serviceUrl:
-      defaultZone: http://${DISCOVERY_SERVICE_DOMAIN:localhost}:8761/eureka/
+      defaultZone: http://${DISCOVERY_HOSTNAME:localhost}:8761/eureka/
 
 logging:
   level:
